<resources>
    <string name="app_name">Minirechner</string>
    <string name="number1">Zahl 1</string>
    <string name="number2">Zahl 2</string>
    <string name="result">Ergebnis</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="errorNumberFormat">Eingabe ist keine Zahl</string>
    <string name="errorDivBy0">Division durch Null</string>
    <string name="delete">Speicher gelöscht</string>
    <string name="save">M</string>
    <string name="loadMemory">M+</string>
    <string name="deleteMemory">M-</string>
    <string name="deleteUserInput">D</string>
    <string name="memoryEmpty">Speicher ist leer</string>
</resources>